# llm-chess-arena

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
demo/: run_game.py  run_llm_game.py  run_stockfish_game.py
llm_chess_arena/: board_display.py  config.py  exceptions.py  game.py  types.py  utils.py
llm_chess_arena/player/: base_player.py  random_player.py  stockfish_player.py
llm_chess_arena/player/llm/: __init__.py  llm_connector.py  llm_move_handler.py  llm_player.py
src/llm_chess_arena/: __init__.py  config.py  exceptions.py  game.py  metrics.py  renderer.py  types.py  utils.py
src/llm_chess_arena/player/: base_player.py  random_player.py  stockfish_player.py
src/llm_chess_arena/player/llm/: __init__.py  llm_connector.py  llm_move_handler.py  llm_player.py
tests/: __init__.py  conftest.py  test_demos.py
tests/fixtures/: mock_llm_connector.py
tests/integration/: test_chess_edge_cases.py  test_game_scenarios.py  test_llm_integration.py  test_llm_integration_vcr.py
tests/integration/cassettes/: llm_complex_position.yaml  llm_endgame_position.yaml  llm_majority_voting.yaml  llm_malformed_response.yaml  llm_retry_illegal_move.yaml  llm_vs_llm_short.yaml  openai_single_move.yaml  test_llm_vs_random_game__with_vcr__then_completes.yaml
tests/unit/: test_config.py  test_game.py  test_metrics.py  test_types.py  test_utils.py  test_utils_property.py
tests/unit/player/: test_base_player.py  test_llm_connector.py  test_llm_move_handler.py  test_llm_player.py  test_llm_voting.py  test_random_player.py  test_stockfish_player.py
